# surfboard

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
integrations/: api.py  claude_mcp.py  setup.py  url_rewrite.py
surfboard/: browser.py  cache.py  cleaner.py  dashboard.py  fetcher.py  log.py  models.py  serializers.py  stealth.py  text_renderer.py  tree.py
tests/: test_feedback_features.py
