[project]
name = "surfboard-mcp"
version = "0.1.0"
description = "Human-quality web browsing for AI agents via MCP"
requires-python = ">=3.11"
dependencies = [
    "readability-lxml>=0.8.1",
    "lxml>=5.0.0",
    "beautifulsoup4>=4.12.0",
    "playwright>=1.48.0",
    "pypdf2>=3.0.0",
]

[project.scripts]
surfboard = "surfboard.dashboard:main"
surfboard-mcp = "integrations.claude_mcp:main"
surfboard-install = "integrations.setup:main"
surfboard-post-install = "integrations.setup:auto_install"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["surfboard*", "integrations*"]
